Refinamentos de Design e novo Rodapé.
Realizados diversos refinamentos de Design e Layout gerais na página;
Implementado o novo Rodapé para o acesso Mobile de momento.

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             patrimônios e pessoas, está inevitavelmente relacionada com a portaria/recepção das empresas. </p>
                             <p> A recepção é o cartão de visitas de uma empresa. É o primeiro ponto de contato de quem está visitando 
                             e, como a primeira impressão é a que fica, quando alguém é mal atendido por uma pessoa a imagem da empresa 
-                            como um todo fica desgastada, por isso é importante ter pessoas especializadas para que a empresa seja bem 
-                            vista desde o seu portão de entrada. </p>
+                            como um todo fica desgastada, por isso <span class="services_description_span">é importante ter pessoas especializadas 
+                            para que a empresa seja bem vista desde o seu portão de entrada</span>. </p>
                     </div>
                     <div class="service_bottom">
                         <div class="service_item">
@@ -93,9 +93,10 @@
                 <div class="projects container">
                     <div class="projects_header">
                         <h1 class="section_title"> Nossa <span class="section_title_span">História</span> </h1>
-                            <p> Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na região. Sabendo
-                            que o mercado atualmente não absorve novas empresas que produzem/prestam serviços do mesmo modo que as empresas já existentes, foi necessário 
-                            criar vantagens competitivas para alavancar essa empresa emergente. </p>
+                            <p> Tudo começou através de uma pesquisa de mercado na qual foi identificada uma oportunidade de negócio a ser empreendido na 
+                            região.<span class="projects_description_span"> Sabendo que o mercado atualmente não absorve novas empresas que produzem/prestam 
+                            serviços do mesmo modo que as empresas já existentes, foi necessário criar vantagens competitivas</span> para alavancar essa 
+                            empresa emergente. </p>
                     </div>
                     <div class="all_projects">
                         <div class="project_item upleft_border upright_border">
@@ -246,15 +247,13 @@
             <section id="footer">
                 <div class="footer container">
                     <div class="brand">
-                        <h1 class="brand_title"> JPGOBBI <span class="brand_span">Segurança Privada</span> </h1>
+                        <h1 class="brand_title"> JPGOBBI <span class="brand_span">Segurança Privada</span> &#174; </h1>
+                            <h2 class="brand_subtitle"> é uma marca registrada de <span class="brand_span"> JPGOBBI Segurança Privada LTDA </span> </h2>
+                                <h3 class="company_address"> Rua Maringá, 180 - Centro - CEP: 95190-000 - São Marcos - RS </h3>
+                                    <h4 class="copyright"> Copyright 2020 &copy; <span class="copy_company"> JPGOBBI </span> </h4>
                     </div>
-                        <h2> Acompanhe a gente nas redes sociais! </h2>
-                            <div class="social_icon">
-                                <div class="social_item">
-                                    <a href="https://www.facebook.com/jpgobbi" target="_blank"> <img src="./icons/facebook.svg" width="100px"/> </a>
-                                </div>
-                            </div>
-                                <p> &copy;2020 <span class="footer_span">JPGOBBI Segurança Privada</span>. Todos os direitos reservados. </p>
+                    <div class="emblem"> </div>
+                    <a href="http://www.facebook.com/jpgobbi" target="_blank"> <div class="social_media"> </div> </a>
                 </div>
             </section>
             <!-- End Footer -->
