Mais refinamentos de Design.
Realizados mais refinamentos de Design na página;
Padronizados os Border-Radius de todos os items da página que estavam fora de padrão;
Pradonizados os Boxes-Shadow de todos os ícones da página que estavam fora de padrão.

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="about container">
                     <h1 class="section_title"> Nossos <span class="section_title_span">Clientes</span> </h1>
                         <p class="col_right_description"> Nosso comprometimento é lhe proporcionar <span class="description_span">o conforto de saber que o que é seu está sendo protegido do 
-                            jeito certo</span>. Confira abaixo as avaliações e depoimentos dos nossos clientes parceiros ao longo dos nossos x anos de mercado. </p>
+                            jeito certo</span>. Confira abaixo as avaliações e depoimentos dos nossos clientes parceiros ao longo dos nossos anos de mercado. </p>
                             <div class="col_right">
                                 <div class="testimonials_row">
                                     <div class="testimonials_col">
