Mais refinamentos de Design.
Refinamentos de Design em mais alguns elementos da página.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <!-- Footer -->
             <section id="footer">
                 <div class="footer container">
-                    <div class="emblem"> </div>
+                    <a href="#hero" id="emblem_link"> <div class="emblem"> </div> </a>
                     <div class="brand">
                         <h1 class="brand_title"> JPGOBBI <span class="brand_span">Segurança Privada</span> &#174; </h1>
                             <h2 class="brand_subtitle"> é uma marca registrada de <span class="brand_span"> JPGOBBI Segurança Privada LTDA </span> </h2>
