--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                         <div class="nav_list">
                             <div class="hamburger"> <div class="bar"> </div> </div>
                                 <ul class="nav_options">
-                                    <li class="nav_link"> <a id="hero_link" href="#hero" data-after="Home" class="active"> Home </a> </li>
-                                    <li class="nav_link"> <a id="services_link" href="#services" data-after="Serviços"> Serviços </a> </li>
-                                    <li class="nav_link"> <a id="projects_link" href="#projects" data-after="Sobre"> Sobre </a> </li>
-                                    <li class="nav_link"> <a id="contact_link" href="#contact" data-after="Contato"> Contato </a> </li>
+                                    <li class="nav_link"> <a id="hero_link" href="#hero" class="active"> Home </a> </li>
+                                    <li class="nav_link"> <a id="services_link" href="#services"> Serviços </a> </li>
+                                    <li class="nav_link"> <a id="projects_link" href="#projects"> Sobre </a> </li>
+                                    <li class="nav_link"> <a id="contact_link" href="#contact"> Contato </a> </li>
                                 </ul>
                         </div>
                     </div>
