Redesign da Section - HOME.
Realizado o Redesign Geral da Section Home no modo Desktop;
Alterada a cor padrão do HTML pois a antiga estava ruim.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <section id="header">
                 <div class="header container">
                     <div class="nav_bar">
-                        <div class="brand"> <a id="brand_hero_link" href="#hero"> <h1 class="brand_title"><span class="brand_span">JPGOBBI</span> Segurança Privada</h1> </a> </div>
                         <div class="nav_list">
                             <div class="hamburger"> <div class="bar"> </div> </div>
                                 <ul class="nav_options">
@@ -31,12 +30,13 @@
             <!-- Hero Section -->
             <section id="hero" class="content_section">
                 <div class="hero container">
-                    <div class="page_fold"></div>
                     <div class="hero_content">
-                        <h1 class="hero_title"> Bem-vindo <span class="hero_title_box"></span> </h1>
-                        <h1 class="hero_title"> ao site da <span class="hero_title_box"></span> </h1>
-                        <h1 class="hero_title"> JPGOBBI <span class="hero_title_box"></span> </h1>
-                            <a href="#contact" type="button" class="call_to_action"> Contatar </a>
+                        <div class="company_logo"></div>
+                        <div class="hero_titles">
+                            <h1 class="hero_title"> Bem-vindo <span class="hero_title_box"></span> </h1>
+                            <h1 class="hero_title"> ao site da <span class="hero_title_box"></span> </h1>
+                            <h1 class="hero_title"> JPGOBBI <span class="hero_title_box"></span> </h1>
+                        </div>
                     </div>
                     <div class="middle"> <div class="mouse"> </div> </div>
                 </div>
