Redesign geral nas Sections.
Realizado o Redesign geral nas Sections do Site no Modo Desktop;
Implementados novos Desenhos Gráficos em SVG.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                         <div class="nav_list">
                             <div class="hamburger"> <div class="bar"> </div> </div>
                                 <ul class="nav_options">
-                                    <li class="nav_link"> <a id="hero_link" href="#hero" class="active"> Home </a> </li>
-                                    <li class="nav_link"> <a id="services_link" href="#services"> Serviços </a> </li>
-                                    <li class="nav_link"> <a id="projects_link" href="#projects"> Sobre </a> </li>
-                                    <li class="nav_link"> <a id="contact_link" href="#contact"> Contato </a> </li>
+                                    <li class="nav_link"> <a id="hero_link" href="#hero" class="active"> <i class="fas fa-home"></i> Home </a> </li>
+                                    <li class="nav_link"> <a id="services_link" href="#services"> <i class="fas fa-concierge-bell"></i> Serviços </a> </li>
+                                    <li class="nav_link"> <a id="projects_link" href="#projects"> <i class="fas fa-info-circle"></i> Sobre </a> </li>
+                                    <li class="nav_link"> <a id="contact_link" href="#contact"> <i class="fas fa-id-badge"></i> Contato </a> </li>
                                 </ul>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                             <div class="project_info right">
                                 <h1 class="project_title"> Vantagem Competitiva </h1>
                                     <p class="project_description"> A nossa <span class="project_detail">vantagem competitiva</span> é a gestão do negócio, dos recursos e das pessoas
-                                    feita de forma aprimorada, aplicando diversas práticas bem aceitas pelo  mercado, tudo isso sendo realizado com o suporte de
+                                    feita de forma aprimorada, <span class="project_detail">aplicando diversas práticas bem aceitas pelo mercado</span>, tudo isso sendo realizado com o suporte de
                                     <span class="project_detail">pessoas capacitadas</span> para tal. </p>
                             </div>
                             <div class="project_image"> <img src="./vectors/think.svg"/> </div>
@@ -111,15 +111,15 @@
                             <div class="project_info">
                                 <h1 class="project_title"> Objetivo </h1>
                                     <p class="project_description"> Nosso principal <span class="project_detail">objetivo</span> é prestar um <span class="project_detail">serviço com
-                                    excelência</span>, e é por isso que queremos ser lembrados. </p>
+                                    excelência</span>, e <span class="project_detail">é por isso que queremos ser lembrados</span>. </p>
                             </div>
                             <div class="project_image"> <img src="./vectors/graph.svg"/> </div>
                         </div>
                         <div class="project_item">
                             <div class="project_info right">
                                 <h1 class="project_title"> Foco </h1>
-                                    <p class="project_description"> Nosso <span class="project_detail">foco</span> está voltado para solucionar os problemas de segurança apresentados pelas
-                                    empresas contratantes, sendo <span class="project_detail">transparente</span> ao ponto de prestar o  serviço com o <span class="project_detail">máximo de
+                                    <p class="project_description"> Nosso <span class="project_detail">foco</span> está voltado para <span class="project_detail">solucionar os problemas de segurança apresentados pelas 
+                                    empresas contratantes</span>, sendo <span class="project_detail">transparente</span> ao ponto de prestar o  serviço com o <span class="project_detail">máximo de
                                     excelência</span> sem prejudicar o bom funcionamento das tarefas cotidianas da empresa contratante. </p>
                             </div>
                             <div class="project_image"> <img src="./vectors/target.svg"/> </div>
@@ -128,8 +128,8 @@
                             <div class="project_info">
                                 <h1 class="project_title"> Qualidade </h1>
                                     <p class="project_description"> Entregamos mais <span class="project_detail">qualidade</span> pois investimos em treinamento e capacitação dos colaboradores, bem
-                                    como praticamos <span class="project_detail">políticas diferenciadas</span> para retenção de talentos. Contamos com profissionais altamente capacitados que passam
-                                    periodicamente por cursos de reciclagem para atender as normas existentes nesta área e a mantê-los <span class="project_detail">constantemente atualizados</span>. </p>
+                                    como praticamos <span class="project_detail">políticas diferenciadas</span> para retenção de talentos. Contamos com <span class="project_detail"> profissionais 
+                                    altamente capacitados que passam periodicamente por cursos de reciclagem</span> para atender as normas existentes nesta área e a mantê-los <span class="project_detail">constantemente atualizados</span>. </p>
                             </div>
                             <div class="project_image"> <img src="./vectors/analysis.svg"/> </div>
                         </div>
